--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="front">
                     <h2>Sandeep Kumar</h2>
                     <p>Data Analyst,India</p>
-                    <button>Hower me</button>
+                    <button>Hover me</button>
                 </div>
                 <div class="back">
                     <img src="waving-hand.png" alt="image">
